# kaitaidiff

./: .gitmodules  Cargo.toml  README.md
crates/kdiff/: Cargo.toml
crates/kdiff-abi/: Cargo.toml
crates/kdiff-abi/src/: lib.rs
crates/kdiff/src/: codegen.rs  config.rs  diff.rs  main.rs  model.rs  paths.rs  plugin.rs  rustkw.rs
crates/kdiff/tests/: e2e.rs
gate/: Cargo.toml
gate/src/: demo.ksy  demo.rs  main.rs
schemas/: png.ksy  sqlite3.ksy
tests/fixtures/: make_png.py  make_sqlite.py
