[workspace]
resolver = "2"
members = [
    "crates/kdiff-abi",
    "crates/kdiff",
    "gate",
]
exclude = ["vendor/kaitai_struct_rust_runtime"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
kdiff-abi = { path = "crates/kdiff-abi" }
kaitai = { path = "vendor/kaitai_struct_rust_runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
